# Multi-Agents-trip-planner

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: config.py
backend/app/agents/: multi_agent_system.py  trip_planner_agent.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  history.py  map.py  poi.py  trip.py
backend/app/models/: database.py  schemas.py
backend/app/services/: amap_service.py  auth_service.py  image_service.py  llm_service.py  memory_service.py  unsplash_service.py
backend/app/tools/: __init__.py  amap_tools.py  mcp_adapter.py
frontend/: package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: AgentStatus.vue  StreamingContent.vue
frontend/src/services/: api.ts  auth.ts
frontend/src/stores/: authStore.ts  tripStore.ts
frontend/src/types/: index.ts
frontend/src/views/: History.vue  Home.vue  Login.vue  Result.vue
